--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactapp",
+  "homepage": "https://gitname.github.io/reactapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,13 +14,16 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-scripts": "^5.0.1"
   },
-  "scripts": {
+  "scripts": {    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
