--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactapp",
-  "homepage": "https://gitname.github.io/reactapp",
+  "homepage": "https://colingreens.github.io/reactapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
