--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactapp",
-  "homepage": "https://colingreens.github.io/reactapp",
+  "homepage": "https://colingreens.github.io/ReactApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "gh-pages": "^4.0.0",
     "react-scripts": "^5.0.1"
   },
-  "scripts": {    
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
